...
      }
    },
    "About" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Account" : {
      "localizations" : {
        "de" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notifications"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Twinskaraoke"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Credits"
          }
        },
...
      }
    },
    "Artists" : {
      "localizations" : {
        "de" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Collection"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Library"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "New"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pause"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Play"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        },
...
      }
    },
    "Featured" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Hide lyrics" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Hide Lyrics" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Home" : {
      "localizations" : {
        "de" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Latest Single"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Made for You"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "More to Explore"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Top Picks for You"
          }
        },
...
      }
    },
    "Music" : {
      "localizations" : {
        "de" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Discover"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Radio"
          }
        },
...
      }
    },
    "New Playlist" : {
      "localizations" : {
        "de" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Best New Songs"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Up Next"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show Lyrics"
          }
        },
...
      }
    },
    "Playing Next" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Public Playlists" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Twinskaraoke Top 100" : {
      "localizations" : {
        "de" : {
...
